Made all generic importers use triples